---
source: tests/generator_tests.rs
expression: "tuple_generator::format_tuples(&tuples)"
---
-- User ownership (owner_id references users)
SELECT 'documents:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'owner' AS relation, 'user:' || CASE WHEN "owner_id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "owner_id"::text ELSE '~' || encode(convert_to("owner_id"::text, 'UTF8'), 'hex') END AS subject
FROM "documents"
WHERE "owner_id" IS NOT NULL
AND "id" IS NOT NULL;

-- Public access flag (is_public)
SELECT 'documents:' || CASE WHEN "id"::text ~ '^[A-Za-z0-9._@-]+$' THEN "id"::text ELSE '~' || encode(convert_to("id"::text, 'UTF8'), 'hex') END AS object, 'public_viewer' AS relation, 'user:*' AS subject
FROM "documents"
WHERE "id" IS NOT NULL
AND "is_public" = TRUE;
